--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -11,40 +11,13 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_cart_clear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green"
-            android:gravity="center"
-            android:paddingBottom="@dimen/space_8"
-            android:paddingTop="@dimen/space_8"
-            android:text="@string/tv_cart_clear"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size_small" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_cart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/white"
-        android:orientation="vertical">
-
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:padding="@dimen/space_10">
 
                 <Fonts.LatoBLack
@@ -52,6 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/tv_cart_item"
+                    android:textSize="18sp"
                     android:textColor="#000" />
 
                 <Fonts.LatoBLack
@@ -59,64 +33,105 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4"
+                    android:textSize="18sp"
                     android:textColor="#000" />
 
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
+            <TextView
+                android:id="@+id/tv_cart_clear"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:padding="@dimen/space_10">
-
-                <Fonts.LatoBLack
-                    android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tv_cart_total"
-                    android:textColor="#000" />
-                <Fonts.LatoBLack
-                    android:id="@+id/tv_cart_total"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="  50"
-                    android:textColor="#000" />
-
-                <Fonts.LatoBLack
-                    android:id="@+id/textView13"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
-                    android:text="@string/currency"
-                    android:textColor="#000" />
+                android:gravity="center"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:paddingTop="@dimen/space_8"
+                android:paddingBottom="@dimen/space_8"
+                android:text="@string/Remove"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="15sp" />
+        </RelativeLayout>
 
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_cart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
-            </LinearLayout>
-        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/btn_cart_checkout"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/bg_rounded_button"
+            android:layout_height="wrap_content"
+            android:background="@color/green"
             android:padding="@dimen/space_5"
             android:text="@string/tv_cart_checkout"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_X_small">
 
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:padding="@dimen/space_10">
+
+                    <Fonts.LatoBLack
+                        android:id="@+id/textView12"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/tv_cart_total"
+                        android:textSize="18sp"
+                        android:textColor="@color/white" />
+
+                    <Fonts.LatoBLack
+                        android:id="@+id/textView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:text="@string/currency"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"/>
+
+                    <Fonts.LatoBLack
+                        android:id="@+id/tv_cart_total"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="50"
+                        android:layout_marginLeft="2dp"
+                        android:textSize="18sp"
+                        android:textColor="@color/white" />
+
+
+
+
+
+                </LinearLayout>
+            </LinearLayout>
+
             <Fonts.LatoBLack
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/checkout"
+                android:padding="10dp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/butonshape"
                 android:textColor="#fff"
-                android:textSize="@dimen/text_size_small" />
+                android:textSize="15sp" />
 
 
         </RelativeLayout>
 
-    </LinearLayout>
 
 </LinearLayout>
