--- a/app/src/main/res/layout/fragment_empty_cart.xml
+++ b/app/src/main/res/layout/fragment_empty_cart.xml
@@ -34,6 +34,7 @@
         android:textColor="@color/green"
         android:textSize="@dimen/text_size_large"
         android:textStyle="bold"
+        android:fontFamily="@font/bold"
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="326dp" />
 
@@ -50,6 +51,7 @@
         android:textColor="@color/dark_gray"
         android:textSize="@dimen/text_size_normal"
         android:textStyle="bold"
+        android:fontFamily="@font/bold"
         tools:layout_editor_absoluteX="10dp"
         tools:layout_editor_absoluteY="326dp" />
 
@@ -68,9 +70,10 @@
 <!--            android:textSize="@dimen/text_size_small" />-->
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/empty_cart1"/>
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/goshopnow"/>
 
     </RelativeLayout>
 
