--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/login_bg"
     tools:context="gogrocer.tcc.LoginActivity"
     android:fillViewport="true">
@@ -56,7 +57,7 @@
             android:layout_below="@id/laddan"
             android:id="@+id/rr1"
             android:weightSum="1"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
@@ -69,7 +70,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_marginStart="50dp"
-            android:textSize="35dp"
+            android:textSize="20sp"
             android:textColor="@color/black"
             android:textAllCaps="false"
             />
@@ -84,8 +85,8 @@
             android:id="@+id/rr2"
             android:layout_gravity="center"
             android:gravity="center"
-            android:layout_marginStart="50dp"
-            android:textSize="20dp"
+            android:layout_marginStart="70dp"
+            android:textSize="15sp"
             android:textColor="@color/black"
             android:textAllCaps="false"
             />
@@ -229,7 +230,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginTop="3dp"
+
             android:layout_marginRight="60dp"
             android:textStyle="italic"
             android:layout_marginLeft="20dp"
@@ -246,7 +247,7 @@
             >
 <View
     android:layout_width="0dp"
-    android:layout_height="match_parent"
+    android:layout_height="1dp"
     android:layout_weight="1"
     />
         <RelativeLayout
@@ -254,10 +255,10 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+
             android:layout_marginRight="12dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="2dp"
             android:background="@drawable/bac1"
             >
 
@@ -298,7 +299,7 @@
 <!--        </RelativeLayout>-->
 
         <TextView
-            android:layout_marginTop="13dp"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="-OR-"
@@ -310,37 +311,40 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
+            android:weightSum="2"
             >
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 >
                 <com.facebook.login.widget.LoginButton
                     xmlns:facebook="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/loginfb"
-                    android:layout_marginTop="25dp"
+
                     android:layout_marginRight="15dp"
                     android:layout_marginLeft="15dp"
-                    android:paddingTop="13dp"
-                    android:paddingBottom="13dp"
-                    facebook:com_facebook_login_text=""
+                    android:paddingTop="11dp"
+                    android:paddingBottom="11dp"
+                    facebook:com_facebook_login_text="Facebook"
                     android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
 
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 >
                 <com.google.android.gms.common.SignInButton
                     android:id="@+id/gsignin"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
+
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:textAlignment="center"
@@ -355,25 +359,20 @@
         <LinearLayout
             android:id="@+id/temp1"
             android:layout_below="@id/aar2"
-            android:layout_marginTop="20dp"
+
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
             android:orientation="horizontal"
             >
-            <TextView
-                android:backgroundTint="@color/green"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_gravity="center"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:background="@drawable/pinky"
-                />
+
             <TextView
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
+                android:gravity="center"
+
                 android:text="@string/create"
                 android:fontFamily="@font/bold"
                 android:textColor="@color/black"
@@ -395,20 +394,13 @@
 
         <LinearLayout
             android:layout_below="@id/temp1"
-            android:layout_marginTop="15dp"
+
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginLeft="40dp"
             android:orientation="horizontal"
             >
-            <TextView
-                android:layout_marginEnd="20dp"
-                android:backgroundTint="@color/green"
-                android:layout_marginStart="20dp"
-                android:layout_gravity="center"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:background="@drawable/pinky"
-                />
+
             <TextView
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
@@ -438,4 +430,4 @@
 
 
     </RelativeLayout>
-</ScrollView>
+</LinearLayout>
