--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,12 @@
         parent="android:style/Widget.Material.RatingBar.Small">
 
     </style>
+    <style name="FacebookLoginButton1">
+
+        <item name="android:background">@drawable/facebook</item>
+
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
 
     <style name="AppTabLayout" parent="Widget.Design.TabLayout">
         <item name="android:layout_marginLeft">40dp</item>
