--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -36,7 +36,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/ll"
+            android:layout_above="@id/cv"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context="gogrocer.tcc.MainActivity"
             tools:showIn="@layout/app_bar_main"
@@ -44,14 +44,22 @@
 
         </FrameLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:cardElevation="@dimen/space_4">
         <LinearLayout
         android:id="@+id/ll"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:weightSum="100"
+
+            android:paddingTop="5dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
         >
         <LinearLayout
             android:id="@+id/bot_store"
@@ -64,8 +72,8 @@
             android:id="@+id/home_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:textColor="@color/white"
-            android:background="@drawable/ic_baseline_home_24"
+            android:textColor="@color/black"
+            android:background="@drawable/store1"
             android:textAlignment="center"
             android:layout_gravity="center"
             />
@@ -73,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/stores"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -89,8 +97,8 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:textColor="@color/white"
-                android:background="@drawable/category"
+                android:textColor="@color/black"
+                android:background="@drawable/category1"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -98,7 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/caty"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -113,8 +121,8 @@
             <TextView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:textColor="@color/white"
-                android:background="@drawable/fav"
+                android:textColor="@color/black"
+                android:background="@drawable/fav1"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -122,7 +130,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/favourt"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -155,8 +163,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:textColor="@color/white"
-                android:background="@drawable/cart1"
+                android:textColor="@color/black"
+                android:background="@drawable/cart2"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -165,7 +173,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/Cart"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -183,8 +191,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:textColor="@color/white"
-                android:background="@drawable/ic_account_circle_black_24dp"
+                android:textColor="@color/black"
+                android:background="@drawable/account1"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
@@ -193,11 +201,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/Me"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_gravity="center"
                 />
 
         </LinearLayout>
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
     </RelativeLayout>
