--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -14,7 +14,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/rl1">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -56,9 +57,25 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_cart"
+            android:layout_above="@id/btnContinue"
+            android:layout_below="@id/rl1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </LinearLayout>
+
+        <Button
+            android:id="@+id/btnContinue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="@string/continue_sh"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:paddingRight="@dimen/space_20"
+            android:elevation="@dimen/space_4"
+            android:paddingLeft="20dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/butonshape"/>
+    </RelativeLayout>
 
 
         <RelativeLayout
@@ -98,7 +115,7 @@
                         android:id="@+id/textView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="2dp"
+                        android:layout_marginRight="2dp"
                         android:text="@string/currency"
                         android:textColor="@color/white"
                         android:textSize="18sp"/>
