--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:shimmer="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="Fragment.Category_Fragment">
 
@@ -43,6 +44,10 @@
 
         </com.facebook.shimmer.ShimmerFrameLayout>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            app:cardElevation="@dimen/space_4">
         <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/collapsing_recycler"
         android:layout_width="wrap_content"
@@ -51,10 +56,11 @@
         android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
         />
-
+        </androidx.cardview.widget.CardView>
         <View
             android:id="@+id/view"
             android:layout_width="0.6dp"
+            android:visibility="gone"
             android:layout_height="match_parent"
             android:background="@color/black"
              />
