--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -2,11 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:weightSum="3"
     xmlns:shimmer="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context="Fragment.Favourite"
-    >
+    tools:context="Fragment.Favourite">
 
     <TextView
         android:layout_width="match_parent"
@@ -23,8 +23,11 @@
             android:orientation="horizontal"
             >
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:cardElevation="@dimen/space_4">
     <LinearLayout
-        android:layout_margin="8dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -35,23 +38,34 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/card_product"
             app:cardBackgroundColor="@color/colorPrimary"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardElevation="@dimen/space_5"
             app:cardUseCompatPadding="true"
             card_view:cardCornerRadius="14dp"
+            app:contentPadding="@dimen/space_8"
             >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/space_5">
+            <ImageView
+                android:id="@+id/img1"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/cart2"/>
         <TextView
-            android:padding="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_below="@id/img1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/fav_prod"
             android:textAlignment="center"
             android:text="Favourite\n Products"
             android:textSize="12sp"
             android:textColor="@color/black"
-            android:drawableTop="@drawable/fav_prod"/>
-
+            />
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -65,17 +79,30 @@
             app:cardElevation="@dimen/space_5"
             app:cardUseCompatPadding="true"
             card_view:cardCornerRadius="14dp"
+            app:contentPadding="@dimen/space_8"
             >
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/space_5">
+
+                <ImageView
+                    android:id="@+id/img2"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/store1"/>
         <TextView
-            android:padding="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_below="@id/img2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:layout_centerHorizontal="true"
             android:id="@+id/fav_store"
             android:text="Favourite\n Stores"
-            android:textSize="13sp"
-            android:textColor="@color/black"
-            android:drawableTop="@drawable/ic_nav_home"/>
+            android:textSize="12sp"
+            android:textColor="@color/black"/>
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -89,25 +116,38 @@
             app:cardElevation="@dimen/space_5"
             app:cardUseCompatPadding="true"
             card_view:cardCornerRadius="14dp"
+            app:contentPadding="@dimen/space_8"
             >
-        <TextView
-            android:padding="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/space_5">
+            <ImageView
+                android:id="@+id/img3"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/category1"/>
+            <TextView
+                android:layout_below="@id/img3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/fav_category"
             android:textAlignment="center"
-            android:text="Favourite\n Categories"
-            android:textSize="13sp"
+            android:text="Favourite\nCategories"
+            android:textSize="12sp"
             android:textColor="@color/black"
-            android:drawableTop="@drawable/category"/>
+            />
+            </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
+            </androidx.cardview.widget.CardView>
             <View
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:id="@+id/v_fav"
+                android:visibility="gone"
         android:background="@color/green"/>
 
             <com.facebook.shimmer.ShimmerFrameLayout
