--- a/app/src/main/res/layout/activity_rating_and_reviews.xml
+++ b/app/src/main/res/layout/activity_rating_and_reviews.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    tools:context="gogrocer.tcc.networkconnectivity.RatingAndReviews">
+    tools:context="gogrocer.tcc.RatingAndReviews">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
